--- a/app/assets/templates/resumes/show.html
+++ b/app/assets/templates/resumes/show.html
@@ -8,8 +8,8 @@
   <p>Skype: <span>{{person.skype}}</span></p>
   <p>Email: <span>{{person.email}}</span></p>
   <p>Salary: <span>{{person.salary}} uhr</span></p>
-  <!--p>Proffession: <span>{{person.proffession}}</span></p>
-  <p>Status: <span>{{person.status}}</span></p-->
+  <p>Proffession: <span>{{person.proffession}}</span></p>
+  <p>Status: <span>{{person.status}}</span></p>
   <p>
     <a href="#{{person.id}}/edit">
       <button type="button" class="btn btn-default">Edit</button>
