--- a/app/assets/templates/resumes/edit.html
+++ b/app/assets/templates/resumes/edit.html
@@ -45,7 +45,7 @@
             <input type="number" class="form-control" name="personSalary" ng-model="person.salary"/>
         </div>
 
-        <!--div class="form-group border">
+        <div class="form-group border">
             <h4>Професія</h4>
             <div class="checkbox">
                 <p ng-repeat="proff in checkboxProff">
@@ -58,11 +58,12 @@
                     <label><input type="checkbox" name="editStatus" value="{{st.id}}" ng-model="st.selected">{{st.name}}</label>
                 </p>
             </div>
-        </div-->
+        </div>
 
       <br/>
-      <a href="#{{person.id}}/show">
+      
         <button type="submit" class="btn btn-warning edit" ng-click="editResume(person)">Edit</button>&nbsp;&nbsp;&nbsp;
+      <a href="#{{person.id}}">
         <button type="submit" class="btn btn-success edit" >Show</button>
       </a>
     </form><br/>
