--- a/app/assets/templates/resumes/index.html
+++ b/app/assets/templates/resumes/index.html
@@ -1,5 +1,10 @@
 <div class= "dv">
   <h1>All resumes</h1>
+  <p>
+    <a href="#new">
+      <input type="button" class="btn btn-primary" value="New"/>
+    </a>
+  </p>  
   <!--form ng-submit="addResume()">
     <input type="text" ng-model="newResume.name">
     <input type="submit" value="Add">
@@ -17,7 +22,7 @@
       <p class="text-center">ID: {{p.id}}</p>
     <div class="text-center">
     <p>
-      <a href="#{{p.id}}/show">
+      <a href="#{{p.id}}">
         <input type="button" class="btn btn-primary" value="Show"/>
       </a>
       <a href="#{{p.id}}/edit">
