--- a/app/assets/templates/resumes/edit.html
+++ b/app/assets/templates/resumes/edit.html
@@ -2,7 +2,7 @@
     <form class="updateForm">
         <div class="form-group inline">
             <label for="">Name</label>
-            <input type="text" class="form-control" name="personName" ng-model="person.name"/>
+            <input type="text" class="form-control" name="personName" ng-model="person.name" required />
         </div>
 
         <!--div class="form-group inline">
