--- a/app/assets/templates/resumes/new.html
+++ b/app/assets/templates/resumes/new.html
@@ -160,7 +160,7 @@
         <br/>
         <div class="" id="comment">
           <h4 for="">Коментарі</h4>
-          <textarea class="form-control" rows="7" name="comment"></textarea>
+          <textarea class="form-control" rows="7" name="comment" ng-model="newPerson.comment"></textarea>
         </div>
         <br/>
       <!--a href="#/"-->
