--- a/app/assets/templates/resumes/show.html
+++ b/app/assets/templates/resumes/show.html
@@ -14,7 +14,7 @@
   <p>Level: <span>{{person.level}}</span></p>
   <p>Work: <span>{{person.work}}</span></p>
   <p>Proff: <span>{{person.proff}}</span></p>
-  <p>Communication: <span ng-repeat='c in comm'>{{c.date}} : {{c.mark}}<br/></span></p>
+  <p>Communication<span>Date: {{person.date}} - Mark: {{person.mark}}<br/></span></p>
   <p>Comment: <span>{{person.comment}}</span></p>
   <p>Education: <span ng-repeat='ed in educ'>{{ed.specialty}} : {{ed.from}} : {{ed.to}} : {{ed.place}}<br/></span></p>
   <p>Experience: <span ng-repeat='ex in exp'>{{ex.specialty}} : {{ex.from}} : {{ex.to}} : {{ex.place}}<br/></span></p>
