--- a/app/assets/templates/resumes/edit.html
+++ b/app/assets/templates/resumes/edit.html
@@ -1,4 +1,5 @@
 <div class="editPerson show_div">
+  <br/><br/>
     <form class="updateForm">
         <div class="form-group inline">
             <label for="">Name</label>
@@ -12,7 +13,7 @@
 
         <div class="form-group inline">
             <label for="">Date of Birth</label>
-            <input type="date" class="form-control" name="personDate" ng-model="person.dateOfBirth"/>
+            <input type="date" class="form-control" name="personDate" ng-model="person.dateofbirth"/>
         </div>
 
         <div class="form-group inline">
@@ -44,25 +45,192 @@
             <label for="">Salary</label>
             <input type="number" class="form-control" name="personSalary" ng-model="person.salary"/>
         </div>
+        <br/>
 
-        <div class="form-group border">
+
+
+
+
+        <div class="form-group inline">
+          <div ng-repeat='sk in skills'>
+            <label for="">Skill<input type="text" class="form-control" name="personSkill" value='{{sk}}' /></label>
+          </div>
+        </div>
+
+        <div class="form-group inline" id="allSkills">
+            <label for="">Skill</label>
+            <input type="text" class="form-control" name="personSkill" placeholder="add skill"/>
+        </div>
+        <div class="form-group inline">
+          <input type="button" value="+" class="addSkill" ng-click="addSkill()"/>
+        </div>&nbsp;&nbsp;&nbsp;
+
+
+        <div class="form-group inline">
+          <div ng-repeat='pr in proffs'>
+            <label for="">Професійні навички<input type="text" class="form-control" name="personProff" value="{{pr}}"/></label>
+          </div>
+        </div>
+
+        <div class="form-group inline" id="allProffs">
+          <label for="">Професійні навички</label>
+          <input type="text" class="form-control" name="personProff" placeholder="add proff"/>
+        </div>
+        <div class="form-group inline">
+          <input type="button" value="+" class="addProff" ng-click="addProff()"/>
+        </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+        <div class="form-group inline border">
+          <h4>Зайнятість</h4>
+          <div class="checkbox">
+            <p ng-repeat="w in checkboxWork">
+              <label><input type="checkbox" name="personWork" value="{{w.id}}" ng-model="w.selected">{{w.name}}</label>
+            </p>
+          </div>
+        </div>
+        <br/>
+
+
+        <div class="form-group inline border" ng-repeat='l in arr_ll'>
+          <h4 for="">Language</h4>
+          <select class="form-control" name="lang">
+            <option>{{l.lang}}</option>
+            <option>Англійська</option>
+            <option>Російська</option>
+            <option>Німецька</option>
+            <option>Французька</option>
+            <option>Італійська</option>
+            <option>Польська</option>
+            <option>Іспанська</option>
+            <option>Португальська</option>
+          </select>
+          <select class="form-control" name="langLevel">
+            <option>{{l.level}}</option>
+            <option>Високий</option>
+            <option>Вище середнього</option>
+            <option>Середній</option>
+            <option>Нище середнього</option>
+            <option>Низький</option>
+          </select>
+        </div>&nbsp;&nbsp;&nbsp;
+
+        <div class="form-group inline border" id="allLangs">
+          <h4 for="">Language</h4>
+          <select class="form-control" name="lang">
+            <option>language</option>
+            <option>Англійська</option>
+            <option>Російська</option>
+            <option>Німецька</option>
+            <option>Французька</option>
+            <option>Італійська</option>
+            <option>Польська</option>
+            <option>Іспанська</option>
+            <option>Португальська</option>
+          </select>
+          <select class="form-control" name="langLevel">
+            <option>level</option>
+            <option>Високий</option>
+            <option>Вище середнього</option>
+            <option>Середній</option>
+            <option>Нище середнього</option>
+            <option>Низький</option>
+          </select>
+        </div>
+        <div class="form-group inline">
+          <input type="button" value="+" class="addLang" ng-click="addLang()"/>
+        </div>
+        <br/>
+
+
+        <div class="form-group inline border" ng-repeat='c in comm'>
+          <h4 for="">Співбесіда</h4>
+          <input type="date" class="form-control" name="communDate" value='{{c.date}}'/>
+          <input type="number" class="form-control" name="communValue" value='{{c.mark}}'/>
+        </div>&nbsp;&nbsp;&nbsp;
+
+        <div class="form-group inline border" id="allCommuns">
+          <h4 for="">Співбесіда</h4>
+          <input type="date" class="form-control" name="communDate" placeholder="Дата"/>
+          <input type="number" class="form-control" name="communValue" placeholder="Кількість балів"/>
+        </div>
+        <div class="form-group inline">
+          <input type="button" value="+" class="addCommun" ng-click="addCommun()"/>
+        </div>
+        <br/>
+
+        <div class="form-group inline border" ng-repeat='ed in educ'>
+          <h4 for="">Education</h4>
+          <input type="text" class="form-control" name="education" value='{{ed.specialty}}'/>
+          <label for="">From</label>
+          <input type="date" class="form-control" name="educationFrom" value='{{ed.from}}'/>
+          <label for="">To</label>
+          <input type="date" class="form-control" name="educationTo" value='{{ed.to}}'/>
+          <input type="text" class="form-control" name="educationPlace" value='{{ed.place}}'/>
+        </div>&nbsp;&nbsp;&nbsp;
+
+        <div class="form-group inline border" id="allEduc">
+          <h4 for="">Education</h4>
+          <input type="text" class="form-control" name="education" placeholder="Спеціальність"/>
+          <label for="">From</label>
+          <input type="date" class="form-control" name="educationFrom" placeholder="Навчався З"/>
+          <label for="">To</label>
+          <input type="date" class="form-control" name="educationTo" placeholder="Навчався До"/>
+          <input type="text" class="form-control" name="educationPlace" placeholder="Навчальний заклад"/>
+        </div>
+        <div class="form-group inline">
+          <input type="button" value="+" class="addEduc" ng-click="addEduc()"/>
+        </div>
+        <br/>
+
+        <div class="form-group inline border" ng-repeat='ex in exp'>
+          <h4 for="">Experience</h4>
+          <input type="text" class="form-control" name="job" value='{{ex.specialty}}'/>
+          <label for="">From</label>
+          <input type="date" class="form-control" name="jobFrom" value='{{ex.from}}'/>
+          <label for="">To</label>
+          <input type="date" class="form-control" name="jobTo" value='{{ex.to}}'/>
+          <input type="text" class="form-control" name="jobPlace" value='{{ex.place}}'/>
+        </div>&nbsp;&nbsp;&nbsp;
+
+        <div class="form-group inline border" id="allJobs">
+          <h4 for="">Experience</h4>
+          <input type="text" class="form-control" name="job" placeholder="Спеціальність"/>
+          <label for="">From</label>
+          <input type="date" class="form-control" name="jobFrom" placeholder="Працював З"/>
+          <label for="">To</label>
+          <input type="date" class="form-control" name="jobTo" placeholder="Працював До"/>
+          <input type="text" class="form-control" name="jobPlace" placeholder="Місце роботи"/>
+        </div>
+        <div class="form-group inline">
+          <input type="button" value="+" class="addJob" ng-click="addJob()"/>
+        </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+
+        <div class="form-group border inline">
             <h4>Професія</h4>
             <div class="checkbox">
                 <p ng-repeat="proff in checkboxProff">
-                    <label><input type="checkbox" name="editProff" value="{{proff.name}}" ng-model="proff.selected">{{proff.name}}</label>
+                    <label><input type="checkbox" name="proffession" value="{{proff.name}}" ng-model="proff.selected">{{proff.name}}</label>
                 </p>
             </div><hr/>
             <h4>Статус</h4>
             <div class="checkbox">
                 <p ng-repeat="st in checkboxStatus">
-                    <label><input type="checkbox" name="editStatus" value="{{st.id}}" ng-model="st.selected">{{st.name}}</label>
+                    <label><input type="checkbox" name="status" value="{{st.id}}" ng-model="st.selected">{{st.name}}</label>
                 </p>
             </div>
         </div>
 
       <br/>
+
+      <div class="" id="comment">
+        <h4 for="">Коментарі</h4>
+        <textarea class="form-control" rows="7" name="comment" ng-model="person.comment"></textarea>
+      </div>
+      <br/>
       
-        <button type="submit" class="btn btn-warning edit" ng-click="editResume(person)">Edit</button>&nbsp;&nbsp;&nbsp;
+      <button type="submit" class="btn btn-warning edit" ng-click="editResume(person)">Edit</button>&nbsp;&nbsp;&nbsp;
       <a href="#{{person.id}}">
         <button type="submit" class="btn btn-success edit" >Show</button>
       </a>
