--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,7 @@ html[lang="en"]
   body
       = render 'layouts/header'
       - if user_signed_in?
-        .container.breadcrumb
-          = render_breadcrumbs separator: " > "
+        //.container.breadcrumb
+          //= render_breadcrumbs separator: " > "
       = yield
       = render 'layouts/footer'
